--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
 }
-.main {width:70%; margin-left:10%; background-color: white; padding: 30px;}
+.main {width:70%; margin-left:10%; background-color: white; padding: 30px; box-shadow: 0 0 10px rgba(0,0,0,0.5);}
 body {background-color:  rgb(250, 250, 250); }
 
 .brick1 {
@@ -111,6 +111,9 @@ body {background-color:  rgb(250, 250, 250); }
     margin-bottom: 30px;
     border:thin solid gray;
     text-align: center;
+}
+.bike {
+
 }
 .brick3_2_2 {
   margin-bottom: 30px;
