--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
   padding: 0;
   margin: 0;
 }
-.main {width:70%; margin-left:10%; background-color: white; padding: 30px; box-shadow: 0 0 10px rgba(0,0,0,0.5);}
+.main {width:70%; height: 100%; margin-left:10%; background-color: white; padding: 30px; box-shadow: 0 0 10px rgba(0,0,0,0.5);}
 body {background-color:  rgb(250, 250, 250); }
 
 .brick1 {
+  margin-top: 15px;
   background: white;
   width: 100%;
   height: auto;
@@ -113,10 +114,14 @@ body {background-color:  rgb(250, 250, 250); }
     text-align: center;
 }
 .bike {
-
+  width: 500px;
+  height: 307px;
+padding-left: 10px;
+padding-right: 10px;
 }
 .brick3_2_2 {
   margin-bottom: 30px;
+  font-family: times new roman;
 }
 .fish {
   width: 100%;
